--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2026.1.4
 charset-normalizer==3.4.4
 contourpy==1.3.3
 cycler==0.12.1
+fastapi==0.115.0
 fonttools==4.61.1
 geographiclib==2.1
 geopandas==1.1.2
@@ -15,10 +16,12 @@ osmnx==2.0.7
 packaging==25.0
 pandas==2.3.3
 pillow==12.1.0
+pydantic==2.9.0
 pyogrio==0.12.1
 pyparsing==3.3.1
 pyproj==3.7.2
 python-dateutil==2.9.0.post0
+python-multipart==0.0.12
 pytz==2025.2
 requests==2.32.5
 scipy==1.16.3
@@ -27,3 +30,4 @@ six==1.17.0
 tqdm==4.67.1
 tzdata==2025.3
 urllib3==2.6.3
+uvicorn[standard]==0.32.0
